idlc_generate(HelloWorldData_lib "HelloWorldData.idl")
add_executable(HelloworldPublisher publisher.c)
add_executable(HelloworldSubscriber subscriber.c)
target_link_libraries(HelloworldPublisher HelloWorldData_lib Vortex::DDSC)
target_link_libraries(HelloworldSubscriber HelloWorldData_lib Vortex::DDSC)
